<resources>
    <string name="app_name">rma18Kalaca17479</string>
    <string name="tekstPretragabuttona">Pretraga</string>
    <string name="upispretragehint">Ovdje ukucaj zanr</string>
    <string name="stringdodajkategoriju">Dodaj zanr</string>
    <string name="stringdodajknjigu">Dodaj Knjigu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StringZaNadjiSliku">nadji sliku</string>
    <string name="HintZaUpisiImeAutora">Upisi ime autora</string>
    <string name="HintZaNazivKnjige">Upisi naziv knjige</string>
    <string name="UpisiKnjigu">upisi knjigu</string>
    <string name="Ponisti">ponisti</string>
    <string name="Povratak">povratak</string>
    <string name="Autori">Autori</string>
    <string name="Kategorije">Kategorije</string>
</resources>
